FIX Remove "more" action icon size, add btn-sm and fix icon alignment in gridfield This commit also adds the class btn--icon-lg which will in future replace btn--icon-large across the CMS.

--- a/client/src/styles/legacy/GridField.scss
+++ b/client/src/styles/legacy/GridField.scss
@@ -102,6 +102,11 @@
     .action-menu__toggle {
       padding-top: 0.25rem;
       padding-bottom: 0.25rem;
+      margin-top: -1px;
+
+      &::before {
+        top: -1px;
+      }
     }
   }
 
